--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/core": "^0.3.77",
+    "@langchain/groq": "^0.2.4",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -35,7 +37,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.1",
@@ -44,7 +46,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
-    "framer-motion": "^11.5.7",
+    "framer-motion": "^11.18.2",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
