--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^11.18.2",
     "genkit": "^1.14.1",
+    "google-translate-api-x": "^10.7.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
