--- a/env.example
+++ b/env.example
@@ -19,8 +19,8 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 
 # -------------------- News API --------------------
-# News API key for educational news features
-NEWS_API_KEY=your_news_api_key_here
+# News API key for educational news features (must be NEXT_PUBLIC_ for client-side usage)
+NEXT_PUBLIC_NEWS_API_KEY=your_news_api_key_here
 
 # -------------------- Optional: Google Maps --------------------
 # Required for college map feature (if not using default)
